--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,6 +11,8 @@
 
 
 {% block content %}
+  <p>mi nombre es: {{title}}</p>
+
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="slideshow-text">
