--- a/web/templates/table.html
+++ b/web/templates/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/table.css">
+    <link rel="stylesheet" href="/static/styles/table.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Table</title>
 
@@ -14,28 +14,23 @@
 <label class="label-filter" for="filter"><b>Filtrar por nombre:</b></label>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." name="filter">
 </div>
+
+
 <table id="myTable">
   <tr class="header">
     <th style="width:60%;">Nombre de las ONG</th>
     <th style="width:40%;">Estado</th>
   </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Berglunds snabbkop</td>
-    <td>Sweden</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Koniglich Essen</td>
-    <td>Germany</td>
-  </tr>
+
+  {% for d in ongs %} 
+   <tr> 
+    <td>{{d['name']}}</td>
+    <td>{{d['description']}}</td>
+   </tr>
+  {% endfor %}
+
 </table>
+<script src="/static/js/table.js"></script>
     
 </body>
 </html>
