--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/static/styles/login.css">
     <title>Loguin</title>
 </head>
 <body>
     <form>
         <div class="imgcontainer">
-          <img src="/img/loguin.jpg" alt="Avatar" class="avatar">
+          <img src="/static/img/image.png" alt="Avatar" class="avatar">
         </div>
       
         <div class="container">
