--- a/web/templates/admin/list_ong.html
+++ b/web/templates/admin/list_ong.html
@@ -13,7 +13,7 @@
   
   <table id="myTable">
     <tr class="header">
-      <th style="width:5%;" >Id</th>
+      <th style="width:5%;" >No.</th>
       <th style="width:20%;">Nombre de las ONG</th>
       <th style="width:30%;">Descripción</th>
       <th style="width:10%;"> Número de contacto</th>
@@ -38,6 +38,20 @@
     {% endfor %}
   
   </table>
+
+  <table id="myTable">
+    <tr class="header">
+      <th style="width:5%;" >No.</th>
+      <th style="width:40%;">Categoría</th>
+    </tr>
+    {% for d in ongs %} 
+     <tr>
+      <td>{{d['id']}}</td> 
+      <td>{{d['category_name']}}</td>
+      <td><button onclick="deleteCategory('{{d['id']}}', '{{d['category_name']}}')">Borrar</button></td>
+      
+     </tr>
+    {% endfor %} 
 
   
 {% endblock %}
